--- a/cap12.html
+++ b/cap12.html
@@ -15,18 +15,18 @@
             <a href="index.html">Voltar p/ Página Inicial</a>
         </div>
         <h2>Passando Métodos por Props</h2>
-        <p>Neste capítulo iremos mostrar que é possível passar uma função/método de um componente para outro através do recurso de Props. Passaremos uma simples função com um alert() do componente PrimeiroComponente para o SegundoComponente. Essa função será executada caso o botão (que se encontra dentro do componente SegundoComponente) seja clicado.</p><br>
-        <p>Primeiramente iremos apresentar o arquivo App.jsx. Note que ele apresenta apenas o componente PrimeiroComponente dentro do return.</p><br>
+        <p>Neste capítulo iremos mostrar que é possível passar uma função/método de um componente para outro através do recurso de Props. Passaremos uma simples função com um <span>alert()</span> do componente <span>PrimeiroComponente</span> para o <span>SegundoComponente</span>. Essa função será executada caso o botão (que se encontra dentro do componente SegundoComponente) seja clicado.</p><br>
+        <p>Primeiramente iremos apresentar o arquivo <span>App.jsx</span>. Note que ele apresenta apenas o componente <span>PrimeiroComponente</span> dentro do <span>return</span>.</p><br>
         <p><img src="img/cap12/img_1.png" alt="Imagem"></p><br>
         <p>Neste exemplo teremos dois componentes:</p><br>
         <p><img src="img/cap12/img_2.png" alt="Imagem"></p><br>
-        <p>Dentro do PrimeiroComponente faremos o import do SegundoComponente, lembre-se que podemos usar componentes dentro de componentes. Antes do return temos a função que será passada para o SegundoComponente. Essa função será passada através do recurso props. Dentro do return chamamos o SegundoComponente e passamos a props com o nome funcProp e entre as chaves temos a função que será executada.</p><br>
+        <p>Dentro do <span>PrimeiroComponente</span> faremos o import do <span>SegundoComponente</span>, lembre-se que podemos usar componentes dentro de componentes. Antes do <span>return</span> temos a função que será passada para o <span>SegundoComponente</span>. Essa função será passada através do recurso <span>props</span>. Dentro do <span>return</span> chamamos o <span>SegundoComponente</span> e passamos a <span>props</span> com o nome <span>funcProp</span> e entre as chaves temos a função que será executada.</p><br>
         <p><img src="img/cap12/img_3.png" alt="Imagem"></p><br>
-        <p>Para usarmos as props, primeiramente temos que escrevê-la dentro dos parênteses após SegundoComponente. Neste exemplo iremos inserir a props no evento de click onClick. Caso o botão seja clicado a função/método que se encontra no PrimeiroComponente será executada.</p><br>
+        <p>Para usarmos as <span>props</span>, primeiramente temos que escrevê-la dentro dos parênteses após <span>SegundoComponente</span>. Neste exemplo iremos inserir a <span>props</span> no evento de click <span>onClick</span>. Caso o botão seja clicado a função/método que se encontra no <span>PrimeiroComponente</span> será executada.</p><br>
         <p><img src="img/cap12/img_4.png" alt="Imagem"></p><br>
         <p>No navegador teremos:</p><br>
         <p><img src="img/cap12/img_5.png" alt="Imagem"></p><br>
-        <p>Ao clicar no botão, o função é executada juntamente com o método alert( ).</p><br>
+        <p>Ao clicar no botão, o função é executada juntamente com o método <span>alert()</span>.</p><br>
         <p><img src="img/cap12/img_6.png" alt="Imagem"></p><br><br>
         <div id="voltar-topo">
             <a href="#div">Voltar p/ o Topo</a>
