--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <li><a href="cap10.html" target="_blank">10 - Trabalhando com Props</a></li>
             <li><a href="cap11.html" target="_blank">11 - Trabalhando com useState</a></li>
             <li><a href="cap12.html" target="_blank">12 - Passando Métodos por Props</a></li>
+            <li><a href="cap13.html" target="_blank">13 - onSubmit() e onChange()</a></li>
         </ul>
     </section>
     <main id="introducao">
